Put the wrong color in the last commit. fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family:Helvetica Neue, sans-serif;
   scroll-behavior: smooth;
- 
+  background-color: '#03002e' ;
 }
 
 a {
